--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "postinstall": "npm start",
-    "start": "node server.js",
+    "start": "node server.js && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
